kubernetes/apps/woodpecker/woodpecker/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.erwanleboucher.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: woodpecker
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 404"]
spec:
  hostnames:
    - "ci.erwanleboucher.dev"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: woodpecker-server
          port: 80
